--- a/project/src/components/ui/Cart.css
+++ b/project/src/components/ui/Cart.css
@@ -1,6 +1,9 @@
 .cartPage{
     background-color: #F5F5F5 0% 0% no-repeat padding-box;
     opacity: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left:100px;
 }
 
 .cartTitle{
@@ -10,23 +13,21 @@
     letter-spacing: -0.17px;
     color: #88A85D;
     opacity: 1;
-    margin-left: 100px;
     margin-bottom: 40px;
 }
 
 .cartBox{
-    margin-left: 229px;
     width: 444px;
     height: 113px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
+    margin-bottom: 30px;
 }
 
 .cartImage{
     background: transparent 0% 0% no-repeat padding-box;
     box-shadow: 7px 7px 11px #00000029;
     opacity: 1;
-    margin-left: 100px;
     width: 79px;
     height: 135px;
 }
@@ -72,6 +73,12 @@
     opacity: 1;
 }
 .deleteButton{
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 13px/23px Myriad Pro;
+    text-align: left;
+    font: normal normal normal 13px/23px Myriad Pro;
+    letter-spacing: 0.25px;
+    color: #88A85D;
+    opacity: 1;
 
 }
 
