--- a/project/src/components/ui/Cart.css
+++ b/project/src/components/ui/Cart.css
@@ -21,7 +21,8 @@
     height: 113px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
+    
 }
 
 .cartImage{
@@ -71,6 +72,14 @@
 .line{
     background: #DDDDDD 0% 0% no-repeat padding-box;
     opacity: 1;
+    width: 746px;
+    height: 2px;
+}
+.leftLine{
+    background: #88A85D 0% 0% no-repeat padding-box;
+    opacity: 1;
+    width: 15px;
+    height: 113px;
 }
 .deleteButton{
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 13px/23px Myriad Pro;
@@ -121,6 +130,14 @@ letter-spacing: 0.2px;
 color: #000000;
 opacity: 1;
 }
+.subtotalValue{
+    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 17px/14px var(--unnamed-font-family-segoe-ui);
+    text-align: left;
+    font: normal normal normal 17px/14px Segoe UI;
+    letter-spacing: 0.2px;
+    color: #4B8300;
+    opacity: 1;
+}
 
 .total{
     font: var(--unnamed-font-style-normal) normal bold 17px/14px var(--unnamed-font-family-segoe-ui);
@@ -130,3 +147,12 @@ opacity: 1;
     color: #000000;
     opacity: 1;
 }
+.totalValue{
+    font: var(--unnamed-font-style-normal) normal bold 17px/14px var(--unnamed-font-family-segoe-ui);
+    text-align: left;
+    font: normal normal bold 17px/14px Segoe UI;
+    letter-spacing: 0.2px;
+    color: #4B8300;
+    opacity: 1;
+}
+
