--- a/project/src/components/ui/orderDone.css
+++ b/project/src/components/ui/orderDone.css
@@ -22,9 +22,20 @@
     font: normal normal normal 15px/17px Segoe UI;
     letter-spacing: 0px;
     color: #FFFFFF;
+    width: 185px;
+height: 30px;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .applauseImage{
     background: transparent 0% 0% no-repeat padding-box;
     opacity: 1;
+
+height: 245px;
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
