--- a/project/src/components/ui/Cart.css
+++ b/project/src/components/ui/Cart.css
@@ -1,9 +1,16 @@
+* {
+    background-color: #F5F5F5;
+}
+
+
 .cartPage{
-    background-color: #F5F5F5 0% 0% no-repeat padding-box;
     opacity: 1;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     margin-left:100px;
+
+    display: grid;
+    grid-template-columns: 68% 32%;
 }
 
 .cartTitle{
@@ -17,8 +24,8 @@
 }
 
 .cartBox{
-    width: 444px;
-    height: 113px;
+    width: 300px;
+    /* height: 113px; */
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
     margin-bottom: 100px;
@@ -76,10 +83,12 @@
     height: 2px;
 }
 .leftLine{
-    background: #88A85D 0% 0% no-repeat padding-box;
+    /* background: #88A85D 0% 0% no-repeat padding-box; */
+    background-color: #88A85D;
     opacity: 1;
     width: 15px;
     height: 113px;
+    margin-left: 130px;
 }
 .deleteButton{
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 13px/23px Myriad Pro;
@@ -96,6 +105,10 @@
     border: 1px solid #DDDDDD;
     border-radius: 6px;
     opacity: 1;
+    width: 290px;
+    height: 151px;
+    margin-top: 120px;
+
 }
 
 .proceedChck{
@@ -103,11 +116,12 @@
     border-radius: 6px;
     opacity: 1;
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 13px/14px var(--unnamed-font-family-segoe-ui);
-    text-align: left;
+    text-align: center;
     font: normal normal normal 13px/14px Segoe UI;
     letter-spacing: 0.16px;
     color: #FFFFFF;
     opacity: 1;
+    margin-top: 5px;
 }
 
 .addMoreBox{
@@ -120,15 +134,17 @@
     letter-spacing: 0px;
     color: #88A85D;
     opacity: 1;
+    width: 185px;
 }
 
 .subtotal{
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 17px/14px var(--unnamed-font-family-segoe-ui);
-text-align: left;
-font: normal normal normal 17px/14px Segoe UI;
-letter-spacing: 0.2px;
-color: #000000;
-opacity: 1;
+    text-align: left;
+    font: normal normal normal 17px/14px Segoe UI;
+    letter-spacing: 0.2px;
+    color: #000000;
+    opacity: 1;
+    padding: 5px;
 }
 .subtotalValue{
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 17px/14px var(--unnamed-font-family-segoe-ui);
@@ -137,6 +153,8 @@ opacity: 1;
     letter-spacing: 0.2px;
     color: #4B8300;
     opacity: 1;
+    padding: 2px;
+
 }
 
 .total{
@@ -146,6 +164,8 @@ opacity: 1;
     letter-spacing: 0.2px;
     color: #000000;
     opacity: 1;
+    padding: 5px;
+
 }
 .totalValue{
     font: var(--unnamed-font-style-normal) normal bold 17px/14px var(--unnamed-font-family-segoe-ui);
@@ -154,5 +174,21 @@ opacity: 1;
     letter-spacing: 0.2px;
     color: #4B8300;
     opacity: 1;
+    padding: 2px;
+
+}
+.cartItem{
+    /* display: flex; */
+    display: flex;
+    flex-direction: row;}
+
+.parent{
+    /* display: grid;
+    grid-template-columns: 400 200px;
+    grid-template-rows: 80px; */
+
+    display: flex;
+    flex-direction: row;
+    
 }
 
