--- a/project/src/components/ui/Checkout.css
+++ b/project/src/components/ui/Checkout.css
@@ -40,7 +40,11 @@
   }
   .inL
   {
-   display: flex;
+   display: flex; 
    flex-direction: column;
 
+  }
+  .checkoutButton{
+
+    display: center;
   }
