--- a/project/src/components/layout/MainNavigation.css
+++ b/project/src/components/layout/MainNavigation.css
@@ -1,11 +1,13 @@
+
 .navBar {
-  margin-top: 35px;
   left: 0px;
-  width: 1366px;
+  width: 1550px;
   height: 52px;
   background: #88A85D 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
   opacity: 1;
+  position: fixed;
+  
 }
 .home {
   margin-left: 150px;
