--- a/project/src/components/ui/Cart.css
+++ b/project/src/components/ui/Cart.css
@@ -29,7 +29,7 @@
     background: #FFFFFF 0% 0% no-repeat padding-box;
     opacity: 1;
     margin-bottom: 100px;
-    
+  
 }
 
 .cartImage{
@@ -89,6 +89,8 @@
     width: 15px;
     height: 113px;
     margin-left: 130px;
+    display: flex;
+    flex-direction: row;
 }
 .deleteButton{
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-normal) 13px/23px Myriad Pro;
@@ -189,6 +191,7 @@
 
     display: flex;
     flex-direction: row;
+    margin-top: 100px;
     
 }
 
